--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "brutalism-portfolio",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
     "start": "parcel src/index.html --open",
     "clean": "rm -rf dist/*",
