--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "brutalism-portfolio - Anees",
-  "author" : "Anees",
+  "name": "brutalism-portfolio",
   "version": "1.0.0",
   "description": "",
+  "main": "index.js",
   "scripts": {
     "start": "parcel src/index.html --open",
     "clean": "rm -rf dist/*",
@@ -16,6 +16,8 @@
     "parcel": "^2.6.0"
   },
   "dependencies": {
-    "jquery": "^3.6.0"
+    "gsap": "^3.10.4",
+    "jquery": "^3.6.0",
+    "pace-js": "^1.2.4"
   }
 }
