--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "brutalism-portfolio",
   "version": "1.0.0",
   "description": "",
+  "main" : "index.html",
   "scripts": {
     "start": "parcel src/index.html --open",
     "clean": "rm -rf dist/*",
